--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://butylin.github.io/react-test",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
